migrate controllers & generate specs
