# gwen-generated-api/openapi.json
@@ -32,6 +32,84 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"DTOUserFactionDeck": {
+				"properties": {
+					"_id": {
+						"type": "string"
+					},
+					"user_id": {
+						"type": "string"
+					},
+					"faction_id": {
+						"type": "string"
+					},
+					"leader_card_id": {
+						"type": "string",
+						"nullable": true
+					},
+					"unit_card_ids": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"special_card_ids": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"created_at": {
+						"type": "string"
+					},
+					"updated_at": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"user_id",
+					"faction_id",
+					"leader_card_id",
+					"unit_card_ids",
+					"special_card_ids"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"DTOCreateUserFactionDeckRequest": {
+				"properties": {
+					"factionId": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"factionId"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"DTOUpdateUserFactionDeckRequest": {
+				"properties": {
+					"leaderCardId": {
+						"type": "string",
+						"nullable": true
+					},
+					"unitCardIds": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"specialCardIds": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
 			"DTOUser": {
 				"properties": {
 					"_id": {
@@ -157,6 +235,225 @@
 				],
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/user/{userId}/decks": {
+			"get": {
+				"operationId": "GetUserFactionDecks",
+				"responses": {
+					"200": {
+						"description": "List of user faction decks",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/DTOUserFactionDeck"
+									},
+									"type": "array"
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Server error"
+					}
+				},
+				"tags": [
+					"User Faction Decks"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"post": {
+				"operationId": "CreateUserFactionDeck",
+				"responses": {
+					"201": {
+						"description": "Faction deck created",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/DTOUserFactionDeck"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Missing factionId"
+					},
+					"409": {
+						"description": "Deck already exists for this faction"
+					},
+					"500": {
+						"description": "Server error"
+					}
+				},
+				"tags": [
+					"User Faction Decks"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/DTOCreateUserFactionDeckRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/user/{userId}/decks/{factionId}": {
+			"get": {
+				"operationId": "GetUserFactionDeck",
+				"responses": {
+					"200": {
+						"description": "User faction deck",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/DTOUserFactionDeck"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Deck not found"
+					},
+					"500": {
+						"description": "Server error"
+					}
+				},
+				"tags": [
+					"User Faction Decks"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "path",
+						"name": "factionId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"put": {
+				"operationId": "UpdateUserFactionDeck",
+				"responses": {
+					"200": {
+						"description": "Faction deck updated",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/DTOUserFactionDeck"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Deck not found"
+					},
+					"500": {
+						"description": "Server error"
+					}
+				},
+				"tags": [
+					"User Faction Decks"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "path",
+						"name": "factionId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/DTOUpdateUserFactionDeckRequest"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteUserFactionDeck",
+				"responses": {
+					"204": {
+						"description": "Faction deck deleted"
+					},
+					"404": {
+						"description": "Deck not found"
+					},
+					"500": {
+						"description": "Server error"
+					}
+				},
+				"tags": [
+					"User Faction Decks"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "path",
+						"name": "factionId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/auth/login": {
